Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3199

HEAD request over SPDY hangs until inactivity timeout

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.1.1
    • 5.2.0
    • SPDY
    • None

    Description

      FetchSM sees non-zero content length in the headers and waits incorrectly for the body until a timeout occurs. If it's a HEAD method, FetchSM should immediately send BODY_DONE to spdy to end the stream.

      9.4 HEAD
      
      The HEAD method is identical to GET except that the server MUST NOT return a message-body in the response. The metainformation contained in the HTTP headers in response to a HEAD request SHOULD be identical to the information sent in response to a GET request. This method can be used for obtaining metainformation about the entity implied by the request without transferring the entity-body itself. This method is often used for testing hypertext links for validity, accessibility, and recent modification.
      

      Attachments

        Activity

          People

            sudheerv Sudheer Vinukonda
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment