[TS-3199]: Do not wait for body for HEAD method